# unitedvoice

./: .env.example  .env.production.template  .env.test  .gitignore  BACKEND_API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  GITHUB_RAILWAY_SETUP.md  GROQ_DEBUGGING_SUMMARY.md  PRODUCTION_SETUP.md  Procfile  QUICK_FIX_DEPLOY.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT_SUMMARY.md  RAILWAY_ENV_SETUP.md  RAILWAY_ENV_TROUBLESHOOTING.md  README.md  README_PRODUCTION.md  RELEASE_NOTES.md  WEBSOCKET_CORS_FIX.md  WEBSOCKET_SETUP.md  browser_websocket_debug.html  comprehensive_audio_flow_test.py  comprehensive_test.py  debug_connection_timing.js  debug_groq_env.py  debug_minimal_server.py  debug_server_events.js  demo_without_groq.py  deploy-to-railway.sh  deploy.sh  docker-compose.yml  fallback_test_report_20250809_133731.json  fallback_test_report_20250809_133845.json  fallback_test_report_20250809_133942.json  final_system_test.py  fix_imports.py  frontend_test_example.html  get_full_greeting.js  groq_debug_report_2025-08-09T13_37_20.962170.json  (+58 more)
docs/: README.md  SUMMARY.md  api-reference.md  branching-flows.md  code-standards.md  component-architecture.md  deployment-guide.md  testing-strategy.md  voice-interactions.md
frontend/: .env.example  .eslintrc.json  README.md  http_stress_test.py  package-lock.json  package.json  simple_websocket_stress_test.py  start-frontend.sh  tailwind.config.ts  websocket_stress_test.py
tests/: __init__.py  test_edge_cases.py  test_intent_system.py
voice-frontend/: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README-DEPLOYMENT.md  (+24 more)
(+65 files in other folders)
